# pycrawl

./: .gitignore  Dockerfile  Makefile  README.md  justfile  main.py  mypy.ini  pyproject.toml  requirements.txt
crawl/: middlewares.py
